sites/all/themes/md_hosoren/css/md-megamenu.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : Oct 9, 2015, 5:00:00 PM
    Author     : ThanhHust
*/

/* MD-megamenu-megamenu */
.md-megamenu{
  width: 1140px;
}

@media (min-width: 1200px) {
  .header-style-3 .awe-logo{
    display: none;
  }
  .header-style-3 .menu-logo a{
    line-height: 80px;
  }
}
@media (max-width: 1199px) {
  .header-style-3 .menu-logo{
    display: none;
  }
}
/* End Header For Style */

#header {
    border-bottom: solid 1px #e1e1e1;
}
.md-megamenu.awemenu-nav{
    border-bottom : 0px;
}
.header-style-4 .awemenu-nav{
		border-bottom: solid 1px #e1e1e1;
}

/* Header style */
.md-megamenu{
    height: 80px;
    background-color: #fff;
    margin: 0 auto;
}
.md-megamenu-megamenu-user, .md-megamenu-megamenu-user-header-4{
		height: auto;
		background: none;
		line-height: 1;
}

.md-megamenu .awemenu-megamenu-wrapper h3.mm-header{
    font-size: 25px;
    margin-top: 0;
    margin-bottom: 15px;
    color: #333;
    font-weight: 700!important;;
}
.md-megamenu .awemenu-standard .awemenu .awemenu-item a{
    padding-top: 0px;
    padding-bottom: 0px;
}
.md-megamenu a.mega-link{
    color: #333!important;
    font-family: Montserrat,Arial,sans-serif; 
    font-size: 14px;
    font-weight: 700;
    text-transform: uppercase;
    text-overflow: ellipsis;
    text-decoration: none;
}
.md-megamenu .awemenu-left .awemenu .awemenu-item>a,
.md-megamenu .mega-link .awemenu-megamenu-wrapper a{
    color: #333!important;
    font-family: Montserrat,Arial,sans-serif;
    font-size: 14px;
    font-weight: 700;
    text-transform: uppercase;
    line-height: 80px;
    padding-left: 15px;
    padding-right: 15px;
    display: block;
    position: relative;
    text-decoration: none;
    text-overflow: ellipsis;
    white-space: nowrap;
    -webkit-transition: color .3s ease,background-color .3s ease;
    -o-transition: color .3s ease,background-color .3s ease;
    transition: color .3s ease,background-color .3s ease;
}


.mega-link .awemenu-submenu a {
    line-height: 40px!important;
    padding: 0px!important;
}

/*
.md-megamenu-megamenu .awemenu-default.awemenu-standard .awemenu .awemenu-item:hover > a{
    background-color: transparent;
    color:#005daf;
}
.md-megamenu-megamenu .awemenu-default.awemenu-standard .awemenu, .md-megamenu-mega-main-menu-style4 .awemenu-default.awemenu-standard .awemenu{
    border-bottom: solid 1px #e1e1e1; 
    height: 79px;
}
*/
/* Button */
.md-megamenu .awemenu-submenu .bottom-link a:link{
    color: #333!important;
}
.md-megamenu .bottom-link a:link:hover{
    color: #fff!important;
}
.md-megamenu .fp-table .btn{
    font-size: 12px!important;
    font-weight: 700!important;
    line-height: 1!important;
    -webkit-border-radius: 0!important;
    border-radius: 0;
    text-transform: uppercase!important;
    padding: 10px 15px;
    border: 1px solid transparent;
}
.md-megamenu .fp-table a{
    display:inline!important;
}
.md-megamenu a.mega-link:hover{
    color: #333!important;
}
.md-megamenu .fp-table-cell a{
    color: #333!important;
}
.md-megamenu .fp-table-cell a:hover{
    color: #333!important;
}
.md-megamenu .numbers-list a:hover{
    color: #fff!important;
}


.awemenu-megamenu-wrapper a:hover {
    color: #005daf;
}
.awemenu-nav .awemenu-megamenu-wrapper a:hover {
    color: #005daf!important;
}




/*Main*/
.md-megamenu .awemenu-item-title{
    padding: 10px 11px !important;
}
.md-megamenu .awemenu-item-level-1 a.awemenu-item-link{
    line-height: 80px;
}
.md-megamenu ul.awemenu-submenu.awemenu-megamenu{
    background: #fff;
    -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.15);
    box-shadow: 1px 2px 3px rgba(0,0,0,.15);
    text-align: left;
}
.md-megamenu .awemenu-submenu a, .md-megamenu .awemenu-submenu a:link{
    padding: 10px;
    display: block;
    color: #898989;
}
.md-megamenu .awemenu-submenu .block-views .nano-content a, 
.md-megamenu .awemenu-submenu .block-views .nano-content a:link{
		padding: 0;
}

.md-megamenu .awemenu-submenu .awe-media-image a{
    padding: 0px;
}
.md-megamenu .awemenu-submenu .awe-media-image .fp-table a{
    padding: 10px;
}


.awemenu-submenu .bottom-link a {
    color: #333!important;
}
.awemenu-submenu .bottom-link a:hover {
    color: #fff!important;
}
/* block */
.md-megamenu .view-product-box-categories .box-list .numbers-list a{
    padding : 0px!important;
}
.md-megamenu .awemenu-megamenu-wrapper ul.numbers-list li{
    padding: 0px 0px 10px!important;
}
.awemenu-megamenu-wrapper h3.widget-title{
    color:#898989;
    margin-bottom: 15px;
    font-size: 14px;
}
.md-megamenu .awemenu-megamenu .widget-title {
    text-transform: none;
    font-family: Roboto,Arial,sans-serif!important;
}

.awemenu-bars .fa {
    margin: 7px auto;
    margin-left: 8px;
    width: 23px;
}
.md-megamenu .awemenu-bars .fa{
    font-family: "awe-glyphicons-awesome";
}
.md-megamenu .awemenu-bars .fa-navicon:before, 
.md-megamenu .awemenu-bars .fa-reorder:before, 
.md-megamenu .awemenu-bars .fa-bars:before {
    content: '\e921';
}
.md-megamenu .cart-action ul.links li.last a:hover, .md-megamenu .cart-action ul.links li.first a:hover{
    color:#fff!important;
}


/* Megamenu header style 4*/
.header-style-4 .header-top{
	border-bottom: none;
}
.header-style-4 .md-megamenu-mega-main-menu-style4 ul.awemenu {
    width: 256px;
}

.md-megamenu-megamenu-user-header-4{
    height: auto;
}
.md-megamenu-megamenu-user-header-4 .awemenu-container ul.awemenu{
    float: none;
    position: relative;
    padding-top: 15px;
    padding-bottom: 15px;
    width: 256px;
}
.md-megamenu-megamenu-user-header-4 .awemenu-container ul.awemenu li.awemenu-item{
    float: none;
    display: block;
    position: static;
    text-align: center;
}
.md-megamenu-megamenu-user-header-4 .awemenu-item > a.awemenu-item-link{
    line-height: 50px;
}
/* ... */

